crates/bitnet-kernels/tests/snapshots/snapshot_wave27__builtin_profile_names.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave27.rs
expression: names
---
[
    "Intel Arc A770",
    "NVIDIA RTX 4090",
    "Apple M1",
    "CPU SIMD (AVX2)",
    "CPU Scalar",
]
