crates/bitnet-kernels/tests/snapshots/snapshot_wave27__compat_report_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave27.rs
expression: report
---
CompatibilityReport {
    device_name: "Intel Arc A770",
    device_class: IntelArc,
    supported_ops: [
        (
            MatrixOps,
            FP16,
            Full(
                0.92,
            ),
        ),
        (
            NormOps,
            FP32,
            Full(
                0.85,
            ),
        ),
    ],
    unsupported_ops: [],
    overall_ready: true,
}
