crates/bitnet-kernels/tests/snapshots/snapshot_wave27__compat_report_incomplete.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave27.rs
expression: report.to_string()
---
CPU Scalar (CPU Scalar): INCOMPLETE — 1/3 required ops supported
  Missing:
    - Quantized Ops @ Binary
    - Attention Ops @ FP16
