crates/bitnet-kernels/tests/snapshots/snapshot_wave27__compat_report_ready.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave27.rs
expression: report.to_string()
---
NVIDIA RTX 4090 (NVIDIA CUDA): READY — 1/1 required ops supported
