crates/bitnet-kernels/tests/snapshots/snapshot_wave27__device_class_display_all.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave27.rs
expression: displays
---
[
    "Intel Arc",
    "Intel Xe",
    "NVIDIA CUDA",
    "AMD ROCm",
    "Apple Metal",
    "CPU SIMD",
    "CPU Scalar",
    "WebGPU",
]
