crates/bitnet-kernels/tests/snapshots/snapshot_wave27__kernel_op_display_all.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave27.rs
expression: displays
---
[
    "MatMul",
    "MatVec",
    "Softmax",
    "RmsNorm",
    "LayerNorm",
    "RoPE",
    "Attention",
    "SiLU",
    "GELU",
    "ReLU",
    "ElementwiseAdd",
    "ElementwiseMul",
    "Scale",
    "Embedding",
    "Dequantize",
    "KvCacheAppend",
]
