crates/bitnet-kernels/tests/snapshots/snapshot_wave27__kernel_registry_a770_summary.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave27.rs
expression: registry.summary()
---
KernelRegistry: 16/16 ops available, 100% GPU coverage
  MatMul: OpenCL-tiled
  MatVec: OpenCL-tiled
  Softmax: OpenCL-tiled
  RmsNorm: OpenCL-tiled
  LayerNorm: OpenCL-tiled
  RoPE: OpenCL-tiled
  Attention: OpenCL-tiled
  SiLU: OpenCL-tiled
  GELU: OpenCL-tiled
  ReLU: OpenCL-tiled
  ElementwiseAdd: OpenCL-tiled
  ElementwiseMul: OpenCL-tiled
  Scale: OpenCL-tiled
  Embedding: OpenCL-tiled
  Dequantize: OpenCL-tiled
  KvCacheAppend: OpenCL-tiled
