crates/bitnet-kernels/tests/snapshots/snapshot_wave27__kernel_variant_display_all.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave27.rs
expression: displays
---
[
    "OpenCL-scalar",
    "OpenCL-tiled",
    "OpenCL-vec",
    "CPU-SIMD",
    "CPU-scalar",
]
