crates/bitnet-kernels/tests/snapshots/snapshot_wave27__operation_category_display_all.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave27.rs
expression: displays
---
[
    "Matrix Ops",
    "Norm Ops",
    "Activation Ops",
    "Position Encoding",
    "Quantized Ops",
    "Attention Ops",
]
