crates/bitnet-kernels/tests/snapshots/snapshot_wave27__perf_report_empty.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave27.rs
expression: report
---
=== Kernel Performance Report ===
Total kernels: 0
Total time:    0.00ns

Kernel                Count        Total          Avg   Throughput
----------------------------------------------------------------------
